--- a/src/004-metallic-glossy-3d-button-effects/index.css
+++ b/src/004-metallic-glossy-3d-button-effects/index.css
@@ -20,10 +20,17 @@ html body, .box, .content {
     border: 1px solid darkgoldenrod;
     border-radius: 2em;
     font-size: calc(var(--height) / 2.5);
+    transform: perspective(500px) rotateY(-15deg);
     box-shadow: 2px 0 0 5px rgba(0, 0, 0, 0.2);
+    transition: 0.5s;
     overflow: hidden;
     position: relative;
     cursor: pointer;
+}
+.box:hover {
+    transform: perspective(500px) rotateY(15deg);
+    text-shadow: -6px 3px 2px rgba(0, 0, 0, 0.2);
+	box-shadow: -2px 0 0 5px rgba(0, 0, 0, 0.2);
 }
 
 .box::before {
