--- a/src/036-solar-eclipse/index.css
+++ b/src/036-solar-eclipse/index.css
@@ -5,6 +5,7 @@ html body {
   align-items: center;
   justify-content: center;
   background: skyblue;
+  margin: 0;
 }
 
 * {
@@ -12,11 +13,12 @@ html body {
 }
 
 .sky {
-  width: 100vm;
-  height: 100vh;
+  width: 100vw;
+	height: 100vh;
   background-color: skyblue;
   position: relative;
   display: flex;
+  overflow: hidden;
   align-items: center;
   justify-content: center;
   animation-name: sky-move;
