--- a/src/001-button-text-staggered-sliding-effects/index.css
+++ b/src/001-button-text-staggered-sliding-effects/index.css
@@ -1,6 +1,7 @@
 html body {
     width: 100%;
     height: 100%;
+    margin: 0;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -8,28 +9,28 @@ html body {
 }
 
 .box {
-    width: 300px;
-    height: 60px;
-    border: 2px solid #666;
+  width: 300px;
+  height: 60px;
+  border: 2px solid #666;
 	text-align: center;
 	font-size: 30px;
 	line-height: 60px;
-    overflow: hidden;
-    cursor: pointer;
+  overflow: hidden;
+  cursor: pointer;
 }
 
 span {
-    color: #262626;
-    transition: 0.5s;
-    display: inline-block;
+  color: #262626;
+  transition: 0.5s;
+  display: inline-block;
 }
 
 span:nth-child(odd) {
-    transform: translateY(100%);
+  transform: translateY(100%);
 }
 
 span:nth-child(even) {
-    transform: translateY(-100%);
+  transform: translateY(-100%);
 }
 
 span::before {
